--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^5.0.3",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "openid-client": "^6.7.1",
     "typescript": "^5.9.2",
     "zod": "^3.0.0"
   },
